--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "@react-navigation/stack": "^7.6.16",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "axios": "^1.13.4",
     "expo": "~54.0.32",
     "expo-status-bar": "~3.0.9",
