--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/elements": "^2.9.5",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "@react-navigation/stack": "^7.6.16",
-    "@react-native-async-storage/async-storage": "2.2.0",
     "axios": "^1.13.4",
     "expo": "~54.0.32",
     "expo-status-bar": "~3.0.9",
@@ -24,7 +24,7 @@
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.7.0"
+    "react-native-svg": "15.12.1"
   },
   "private": true
 }
