--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "start": "expo start",
     "go:android": "expo start --android",
     "run:android": "expo run:android",
-    "ios": "expo run:ios",
+    "run:ios": "expo run:ios",
     "web": "expo start --web",
-    "android": "expo run:android"
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -19,6 +20,7 @@
     "@react-navigation/stack": "^7.6.16",
     "axios": "^1.13.4",
     "expo": "~54.0.32",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
