--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.anonymous.reactnativehotelbooking"
+      "package": "com.anonymous.reactnativehotelbooking",
+      "permissions": ["INTERNET", "ACCESS_NETWORK_STATE"]
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
