--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@react-navigation/stack": "^7.6.16",
     "axios": "^1.13.4",
     "expo": "~54.0.32",
+    "expo-camera": "~17.0.10",
+    "expo-image-picker": "~17.0.10",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
